新增 DShowCapture::ListVideoConfigures()
Signed-off-by: shines77 <gz_shines@msn.com>

--- a/CaptureDemo1/CaptureDemo/CaptureDemo.vcxproj.filters
+++ b/CaptureDemo1/CaptureDemo/CaptureDemo.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="DShowCapture.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Mtype.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="DShowCapture.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Mtype.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
